name:                stm-linkedlist
version:             0.1.0.0
synopsis:            Doubly linked lists for STM
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Joey Adams
maintainer:          joeyadams3.14159@gmail.com
copyright:           Copyright (c) Joseph Adams 2011
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
    exposed-modules:    Data.STM.LinkedList.Internal
    build-depends:      base == 4.*
                      , stm
    ghc-options:        -Wall
